--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "@babel/runtime": "7.6.2",
     "cardinal": "^2.1.1",
     "chalk": "2.4.2",
+    "clipboardy": "^2.1.0",
+    "command-exists": "^1.2.8",
     "common-tags": "^1.8.0",
     "core-js": "^3.1.4",
     "delay": "4.3.0",
