--- a/package.json
+++ b/package.json
@@ -58,14 +58,11 @@
   "keywords": [],
   "dependencies": {
     "@babel/runtime": "7.6.2",
-    "cardinal": "^2.1.1",
     "chalk": "2.4.2",
     "clipboardy": "^2.1.0",
     "command-exists": "^1.2.8",
-    "common-tags": "^1.8.0",
     "conf": "^6.2.0",
     "core-js": "^3.1.4",
-    "delay": "4.3.0",
     "execa": "^3.3.0",
     "figures": "3.0.0",
     "fs-extra": "8.1.0",
@@ -76,7 +73,6 @@
     "ink-select-input": "3.1.2",
     "ink-spinner": "3.0.1",
     "ink-table": "^2.0.1",
-    "is-online": "^8.2.0",
     "lodash.merge": "^4.6.2",
     "mem-fs": "1.1.3",
     "mem-fs-editor": "6.0.0",
@@ -84,16 +80,11 @@
     "p-queue": "6.1.1",
     "pino": "^5.12.3",
     "pino-pretty": "^3.0.0",
-    "prettier": "1.18.2",
     "prop-types": "15.7.2",
     "ramda": "^0.26.1",
     "react": "16.10.2",
-    "read-pkg": "^5.1.1",
-    "semver": "6.3.0",
-    "string-similarity": "3.0.0",
     "tomo-cli": "^1.1.0",
-    "update-notifier": "3.0.1",
-    "validate-npm-package-name": "^3.0.0"
+    "update-notifier": "3.0.1"
   },
   "devDependencies": {
     "@babel/cli": "7.6.2",
