--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
       "**/__tests__/**/*.(e2e|test).[jt]s?(x)"
     ],
     "testPathIgnorePatterns": [
-      "/__tests__/fixtures"
+      "/__tests__/resources"
     ],
     "watchPlugins": [
       "jest-watch-typeahead/filename",
