--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@babel/plugin-proposal-export-default-from": "7.5.2",
     "@babel/plugin-proposal-optional-chaining": "7.6.0",
     "@babel/plugin-proposal-pipeline-operator": "7.5.0",
+    "@babel/plugin-syntax-bigint": "^7.7.4",
     "@babel/plugin-transform-runtime": "7.6.2",
     "@babel/preset-env": "7.6.2",
     "@babel/preset-react": "7.0.0",
@@ -111,6 +112,7 @@
     "open-cli": "5.0.0",
     "release": "6.1.0",
     "rimraf": "3.0.0",
+    "sinon": "^7.5.0",
     "stmux": "1.7.1",
     "watch": "1.0.2"
   },
