--- a/package.json
+++ b/package.json
@@ -68,18 +68,18 @@
     "figures": "3.0.0",
     "fs-extra": "8.1.0",
     "get-stdin": "^7.0.0",
-    "ink": "2.3.0",
+    "ink": "^2.7.1",
     "ink-big-text": "1.0.1",
     "ink-box": "1.0.0",
     "ink-select-input": "3.1.2",
     "ink-spinner": "3.0.1",
     "ink-table": "^2.0.1",
     "is-elevated": "^3.0.0",
-    "meow": "5.0.0",
+    "meow": "^6.1.0",
     "prop-types": "15.7.2",
     "ramda": "^0.26.1",
-    "react": "16.10.2",
-    "tomo-cli": "^1.5.3",
+    "react": "^16.13.1",
+    "tomo-cli": "^1.5.9",
     "update-notifier": "3.0.1"
   },
   "devDependencies": {
